--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,210 +1,66 @@
-/* Set the height of the HTML element to 100% to allow full viewport coverage */
-html {
-    height: 100%;
+.StripeElement,
+.stripe-style-input {
+  box-sizing: border-box;
+  height: 40px;
+  padding: 10px 12px;
+  border: 1px solid transparent;
+  border-radius: 0px;
+  background-color: white;
+  box-shadow: 0 1px 3px 0 #e6ebf1;
+  -webkit-transition: box-shadow 150ms ease;
+  transition: box-shadow 150ms ease;
 }
 
-/* Style the body with a full-screen background image that is fixed, 
-   covering the entire viewport minus 164px for the header. 
-   Also sets the default text color and font family. */
-body {
-    background: url('/media/homepage_background_cropped.jpg') no-repeat center center fixed;
-    background-size: cover;
-    height: calc(100vh - 164px);  /* Adjust height to account for a fixed header */
-    color: #555;  /* Set default text color */
-    font-family: 'Lato', sans-serif;  /* Set the font family with a fallback */
+.StripeElement--focus,
+.stripe-style-input:focus,
+.stripe-style-input:active {
+  box-shadow: 0 1px 3px 0 #cfd7df;
 }
 
-/* Icon styling from Bulma framework 
-   Ensures icons are centered and have a consistent size */
-.icon {
-    align-items: center;
-    display: inline-flex;
-    justify-content: center;
-    height: 1.5rem;
-    width: 1.5rem;
+.StripeElement--webkit-autofill {
+  background-color: #fefde5 !important;
 }
 
-/* Set the logo font to be uppercase */
-.logo-font {
-    text-transform: uppercase;
+.stripe-style-input::placeholder {
+    color: #aab7c4;
 }
 
-/* Ensure the main logo link only takes up as much space as needed */
-.main-logo-link {
-    width: fit-content;
+.fieldset-label {
+    position: relative;
+    right: .5rem;
 }
 
-/* Style for the "Shop Now" button */
-.shop-now-button {
-    background: black;
-    color: white;
-    min-width: 260px;  /* Ensure a minimum width for the button */
+#payment-form .form-control,
+#card-element {
+    color: #000;
+    border: 1px solid #000;
 }
 
-/* Generic button style for black buttons */
-.btn-black {
-    background: black;
-    color: white;
+select,
+select option {
+    color: #000000;
 }
 
-.btn-outline-black {
-    background: white;
-    color: black !important; /* use important to override link colors for <a> elements */
-    border: 1px solid black;
-}
-/* Hover, active, and focus states for the "Shop Now" button and black buttons */
-.shop-now-button:hover,
-.shop-now-button:active,
-.shop-now-button:focus,
-.btn-black:hover,
-.btn-black:active,
-.btn-black:focus {
-    background: #222;  /* Darken the background on interaction */
-    color: white;  /* Keep the text color white */
+select:invalid,
+select option[value=""] {
+    color: #aab7c4 !important;
 }
 
-/* Utility class to force black text color */
-.text-black {
-    color: #000 !important;
-}
-
-/* Utility class to add a black border */
-.border-black {
-    border: 1px solid black !important;
-}
-
-/* Utility class to force a black background */
-.bg-black {
-    background: #000 !important;
-}
-
-.overlay {
-	height: 100%;
-	width: 100%;
-	top: 0;
-	left: 0;
+#loading-overlay {
+	display: none;
 	position: fixed;
-	background: white;
-	z-index: -1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(23, 162, 184, .85);
+    z-index: 9999;
 }
 
-a.category-badge > span.badge:hover {
-    background: #212529 !important;
-    color: #fff !important;
-}
-
-.btt-button {
-    height: 42px;
-    width: 42px;
-    position: fixed;
-    bottom: 10px;
-    right: 10px;
-}
-
-.btt-link {
-    cursor: pointer;
-}
-
-/* ------------------------------- bootstrap toasts */
-
-.message-container {
-    position: fixed;
-    top: 72px;
-    right: 15px;
-    z-index: 99999999999;
-}
-
-.custom-toast {
-    overflow: visible;
-}
-
-.toast-capper {
-    height: 2px;
-}
-
-/* from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
-.arrow-up {
-    width: 0; 
-    height: 0; 
-    border-left: 4px solid transparent;
-    border-right: 4px solid transparent; 
-    border-bottom: 10px solid black;
-    position: absolute;
-    top: -10px;
-    right: 36px;
-}
-
-/* Convenience classes - colors copied from Bootstrap */
-.arrow-primary {
-    border-bottom-color: #007bff !important;
-}
-
-.arrow-secondary {
-    border-bottom-color: #6c757d !important;
-}
-
-.arrow-success {
-    border-bottom-color: #28a745 !important;
-}
-
-.arrow-danger {
-    border-bottom-color: #dc3545 !important;
-}
-
-.arrow-warning {
-    border-bottom-color: #ffc107 !important;
-}
-
-.arrow-info {
-    border-bottom-color: #17a2b8 !important;
-}
-
-.arrow-light {
-    border-bottom-color: #f8f9fa !important;
-}
-
-.arrow-dark {
-    border-bottom-color: #343a40 !important;
-}
-
-.bag-notification-wrapper {
-    height: 100px;
-    overflow-x: hidden;
-    overflow-y: auto;
-}
-
-/* -------------------------------- Media Queries */
-
-/* Slightly larger container width on extra-large screens (min-width: 1200px) */
-@media (min-width: 1200px) {
-  .container {
-    max-width: 80%;  /* Increase container width */
-  }
-}
-
-/* Fixed top navbar only on medium screens and up (min-width: 992px) */
-@media (min-width: 992px) {
-    /* Fix the navbar at the top of the page on larger screens */
-    .fixed-top-desktop-only {
-        position: fixed;
-        top: 0;
-        right: 0;
-        left: 0;
-        z-index: 1030;  /* Ensure navbar stays on top */
-    }
-
-    /* Add padding to the header container to account for the fixed navbar */
-    .header-container {
-        padding-top: 164px;
-    }
-}
-/* pad the top a bit when navbar is collapsed on mobile */
-@media (max-width: 991px) {
-    .header-container {
-        padding-top: 116px;
-    }
-
-    body {
-        height: calc(100vh - 116px);
-    }
+.loading-spinner {
+	display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    height: 100%;
 }
